--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,39 +1,22 @@
-/* Heading font family imported */
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Anek+Devanagari:wght@100..800&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@300&display=swap");
 
 .App {
-	min-height: 100vh;
-	display: flex;
-	background-image: url(./background.png);
-	background-size: contain;
-	background-position: center;
+  min-height: 100vh;
+  display: flex;
+  background-color: #1f1f1f;
+  background-position: center;
+  background-size: cover;
 }
 
 ::-webkit-scrollbar {
-	width: 0px;
+  width: 0px;
 }
 
-.chatbox {
-	background-color: red;
-	/* height: 80vh; */
+::-webkit-scrollbar-thumb {
+  background: rgba(136, 136, 136, 0.281);
 }
 
-* {
-	font-family: 'work sans';
-	font-weight: 600;
-}
-
-.heading {
-	font-family: "lobster" !important;
-}
-
-.notinum {
-	background-color: 'red';
-	display: flex;
-	border-radius: '50%';
-	transform: 'translateX(-15px) translateY(-3px)';
-	color: 'white';
-	font-size: 12;
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
