--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,7 +3,7 @@
 .App {
   min-height: 100vh;
   display: flex;
-  background-color: #1f1f1f;
+  background-image: url("./background.png");
   background-position: center;
   background-size: cover;
 }
